--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,20 @@
 @tailwind utilities;
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+
+/* styles/globals.css */
+.group:hover .dropdown-menu,
+.group:focus-within .dropdown-menu {
+  visibility: visible;
+  opacity: 1;
+}
+
+.dropdown-menu {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+body{
+    background-color: #10102a;
+}
