--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,10 @@
   transition: opacity 0.3s ease;
 }
 
-body{
+main {
+    max-width: 1900px;
+    margin: 0 auto;
+    padding: 0;
     background-color: #10102a;
-}
+  }
+  
